MD User Manager: Open URLs in a foreground tabs

BUG=609779, 563722

Review-Url: https://codereview.chromium.org/1955033003
Cr-Commit-Position: refs/heads/master@{#392593}

Former-commit-id: 87d74bbadc6fc4e28e6b5559bdda6014284d059f